--- a/www/node/Makefile
+++ b/www/node/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
-DISTVERSION=	15.5.1
+DISTVERSION=	15.10.0
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${DISTVERSION}/
 
@@ -15,6 +15,9 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 BROKEN_SSL=		libressl libressl-devel
 BROKEN_SSL_REASON=	Node.js 15.x requires OpenSSL 1.1.x or the BUNDLED_SSL option enabled
 ONLY_FOR_ARCHS=		aarch64 amd64 armv6 armv7 i386 powerpc64 powerpc64le
+
+USES=		compiler:c++11-lib gmake python:build pkgconfig \
+		localbase shebangfix
 
 OPTIONS_DEFINE=		BUNDLED_SSL DOCS NLS DTRACE
 OPTIONS_DEFAULT=	DTRACE
@@ -39,13 +42,10 @@ BUNDLED_SSL_CONFIGURE_OFF=	--shared-openssl --openssl-use-def-ca-store
 BUNDLED_SSL_RUN_DEPENDS_OFF=	ca_root_nss>=0:security/ca_root_nss
 
 NLS_CONFIGURE_ON=	--with-intl=system-icu
-NLS_BUILD_DEPENDS=	icu>=68.1:devel/icu
+NLS_BUILD_DEPENDS=	icu>=68.2:devel/icu
 NLS_LIB_DEPENDS=	libicui18n.so:devel/icu
 
 DTRACE_CONFIGURE_ON=	--with-dtrace
-
-USES=		compiler:c++11-lib gmake python:build pkgconfig \
-		localbase shebangfix
 
 HAS_CONFIGURE=	yes
 
@@ -54,6 +54,7 @@ CONFLICTS_INSTALL=	node10-[0-9]* node12-[0-9]* node14-[0-9]*
 CONFIGURE_ARGS=	--prefix=${PREFIX_RELDEST} \
 		--without-npm \
 		--shared-brotli \
+		--shared-cares \
 		--shared-libuv \
 		--shared-nghttp2 \
 		--shared-zlib
@@ -70,10 +71,12 @@ MAKE_ENV+=	CC.host=${CC} CFLAGS.host="${CFLAGS}" \
 		LINK.host=${CXX} LDFLAGS.host="${LDFLAGS}"
 
 BUILD_DEPENDS+=	brotli>=1.0.9,1:archivers/brotli \
-		libuv>=1.40.0:devel/libuv \
-		libnghttp2>=1.41.0:www/libnghttp2 \
+		c-ares>=1.17.1:dns/c-ares \
+		libuv>=1.41.0:devel/libuv \
+		libnghttp2>=1.42.0:www/libnghttp2 \
 		objdump:devel/binutils
 LIB_DEPENDS+=	libbrotlidec.so:archivers/brotli \
+		libcares.so:dns/c-ares \
 		libuv.so:devel/libuv \
 		libnghttp2.so:www/libnghttp2
 
