--- a/security/libressl/Makefile
+++ b/security/libressl/Makefile
@@ -2,7 +2,8 @@
 # $FreeBSD$
 
 PORTNAME=	libressl
-PORTVERSION=	3.2.3
+PORTVERSION=	3.2.4
+PORTREVISION=	1
 CATEGORIES=	security devel
 MASTER_SITES=	OPENBSD/LibreSSL
 
